--- a/go-rewrite/subsessions.html
+++ b/go-rewrite/subsessions.html
@@ -86,6 +86,11 @@
     </div>
   </div>
   <div x-load x-load-src="../alpine-components/tables.js" x-data="tables">
+    <style>
+      [x-cloak] {
+        display: none !important;
+      }
+    </style>
     <div class="grid grid-cols-{{ len .Session_Results }} text-center pb-6">
       <button id="PRACTICE QUALIFY HEAT RACE" x-on:click="toggle" class="border-2 bg-gray-700">
         Practice Table
