Include navigation bars as applicable, adjust navigation styles

--- a/Stat-N-Track/season-summaries.html
+++ b/Stat-N-Track/season-summaries.html
@@ -24,6 +24,19 @@
       <a class="underline p-2" href="/Stat-N-Track/">Home</a>
     </div>
   </div>
+  <div
+    class="text-center lg:text-xl md:text-lg sm:text-md grid grid-cols-1 md:grid-cols-3 lg:grid-cols-9 py-2 border-white border-x-2 border-b-2"
+  >
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/subsessions/">All Sessions</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/subsessions/by-year/">Sessions By Year</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/subsessions/by-car-class/">Sessions By Car Class</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/subsessions/by-track/">Sessions By Track</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/standings/">All Season Standings</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/standings/full-participation/">Fully Participated Season Standings</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/standings/by-year/">Season Standings By Year</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/standings/by-car-class/">Season Standings By Car Class</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Standing.Season_Driver_Data.Cust_ID }}/head-to-head/">Head to Head Matchups</a></div>
+  </div>
   <div class="text-center py-4 border-x-2 border-b-2">
     <p><b>{{ .Standing.Season_Name }}: Season Summary for {{ .Standing.Season_Driver_Data.Display_Name }}</b></p>
     <div class="text-center row-span-1">
