--- a/Stat-N-Track/subsession-lists.html
+++ b/Stat-N-Track/subsession-lists.html
@@ -28,6 +28,19 @@
       <a class="underline p-2" href="/Stat-N-Track/">Home</a>
     </div>
   </div>
+  <div
+    class="text-center lg:text-xl md:text-lg sm:text-md grid grid-cols-1 md:grid-cols-3 lg:grid-cols-9 py-2 border-white border-x-2 border-b-2"
+  >
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/subsessions/">All Sessions</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/subsessions/by-year/">Sessions By Year</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/subsessions/by-car-class/">Sessions By Car Class</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/subsessions/by-track/">Sessions By Track</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/standings/">All Season Standings</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/standings/full-participation/">Fully Participated Season Standings</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/standings/by-year/">Season Standings By Year</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/standings/by-car-class/">Season Standings By Car Class</a></div>
+    <div><a class="underline" href="/Stat-N-Track/user/{{ .Cust_ID }}/head-to-head/">Head to Head Matchups</a></div>
+  </div>
   <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <table x-load x-load-src="{{ .Table_Component_Path }}" x-ref="Table" x-data="table"
       class="text-center col-span-1">
